class Booking:
    def __init__(self, booking_id, customer, amount):
        self.booking_id = booking_id
        self.customer = customer
        self.amount = amount
