from ship import Ship

class CargoShip(Ship):
    pass
