from ship import Ship

class CruiseShip(Ship):
    pass
