class Customer:
    def __init__(self, customer_id, name):
        self.customer_id = customer_id
        self.name = name
